# hm-arch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: github-release.yml  npm-installer-ci.yml  publish-npm.yml  publish-pypi.yml  standalone-release-build.yml
benchmark-results/hotpotqa/: matrix_summary.json  run_manifest.json
benchmark-results/hotpotqa-smoke/: matrix_summary.json  run_manifest.json
benchmark-results/hotpotqa-smoke/hotpotqa-claude_code-hm_arch-s0-k20-079f4b049f4095c1/: queries.csv  queries.jsonl  retrieval_evidence.jsonl  summary.json
benchmark-results/hotpotqa-smoke/hotpotqa-claude_code-hm_arch-s0-k5-2ca4a109b01974a3/: queries.csv  queries.jsonl  retrieval_evidence.jsonl  summary.json
benchmark-results/hotpotqa-smoke/hotpotqa-claude_code-no_memory-s0-k20-20faf706022ddc94/: queries.csv  queries.jsonl  retrieval_evidence.jsonl  summary.json
benchmark-results/hotpotqa-smoke/hotpotqa-claude_code-no_memory-s0-k5-b4ba66292d9d15a0/: queries.csv  queries.jsonl  retrieval_evidence.jsonl  summary.json
benchmark-results/tau2-comparison/: benchmark_table.csv  benchmark_table.json  matrix_status.json  openclaw_pending.json  openclaw_status.json  provenance.json  summary_table.csv  summary_table.json  trajectory_index.jsonl
benchmarks/: __init__.py  harness.py  prd_targets.py
benchmarks/agent_memory/: __init__.py  compatibility.py  contract.py  metrics.py  registry.py
benchmarks/agent_memory/backends/: __init__.py  base.py  (+5 more)
benchmarks/cross_agent/: __init__.py  checkpoint.py  compatibility.py  failure_provenance.py  locomo_matrix.py  metrics.py  output.py  protocol.py  run_id.py  runner.py  types.py
docs/: RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.2.md  RELEASE_NOTES_v2.0.3.md  RELEASE_NOTES_v2.0.4.md  RELEASE_NOTES_v2.0.5.md  VERSIONING.md  agent-integration-roadmap.md  agent-memory-benchmarks.md  api.md  benchmarks.md  cross-agent-benchmarks.md  cursor-codex-workflow.md  integration-cli-smoke.md  memory-sharing-policies.md  npm-installer-publication.md  npm-installer.md  openclaw-e2e-smoke.md  openclaw-release-readiness.md  phase2-plan.md  phase3-plan.md  pypi-clean-install.md  sidecar-protocol.md  spec.md  standalone-executable.md  storage-concurrency.md  tasks.md  v2-migration-guide.md
docs/agents/: README.md  benchmark-compatibility-matrix.md  claude-code.md  codex.md  compatibility-matrix.md  hermes.md  openclaw.md
examples/: __init__.py  agent_hooks_common.py  agent_integration.py  basic_usage.py  fetch_linear_comments.py  import_package.py  release_smoke.py
examples/claude_code_hooks/: README.md  __init__.py  demo.py  hooks.py  idle_consolidate.py  turn_end.py  turn_start.py
examples/codex_hooks/: README.md  __init__.py  demo.py  hooks.py  idle_consolidate.py  turn_end.py  turn_start.py
fixtures/sidecar-protocol/: README.md  manifest.json
packaging/: cli_entrypoint.py  hm-arch.spec
scripts/: build_standalone.py  generate_api_docs.py  prepare_release_artifacts.py  release_artifact_naming.py  run_cross_agent_benchmark.py  run_hotpotqa_matrix.py  run_locomo_matrix.py  run_locomo_matrix_handoff.sh  run_openclaw_e2e.py  run_prd_benchmarks.py  run_tau2_bench_comparison.py  smoke_standalone_artifact.py  sync_tau2_bench_data.py  validate_release_artifacts.py  validate_release_gate.py  verify_release_versions.py
src/hm_arch/: __init__.py  _version.py  config.py  context.py  core.py  linear.py  provenance.py  types.py
tests/: conftest.py  test_agent_adapter_protocol.py  test_agent_hooks.py  test_agent_memory_backends.py  test_claude_code_installer.py  test_codex_installer.py  test_config.py  test_consolidation.py  test_context.py  test_core.py  test_cross_agent_agent_runners.py  test_cross_agent_benchmark.py  test_cross_agent_memory_backends.py  test_cross_agent_platform.py  test_cross_store_search.py  test_facade_integration.py  test_forgetting.py  test_hotpotqa_matrix.py  test_integrations_cli.py  test_integrations_cli_manage.py  test_integrations_common_runtime.py  test_integrations_config.py  test_integrations_hermes.py  test_integrations_openclaw_e2e.py  test_integrations_openclaw_manage.py  test_integrations_openclaw_sidecar.py  test_integrations_openclaw_wheel.py  test_integrations_protocol.py  test_integrations_sidecar_protocol.py  test_l0_sensory.py  test_l1_working.py  test_l2_episodic.py  test_l3_semantic.py  test_l4_integration.py  test_l4_ltm.py  test_l5_procedural.py  test_l6_meta.py  test_linear_comments.py  test_locomo_matrix.py  test_memory_backend_contract.py  (+23 more)
tests/fixtures/: fake_agent_cli.py  fake_tau2_agent_cli.py
tests/prd_benchmarks/: __init__.py  test_benchmark_semantics.py  test_prd_performance.py  test_prd_thirty_day_archive.py
(+469 files in other folders)
