[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "hm-arch"
dynamic = ["version"]
description = "Offline-first human-like memory SDK for coding agents (L0–L6, SQLite, consolidation)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "HM-Arch contributors" }]
keywords = [
    "agent-memory",
    "coding-agents",
    "sqlite",
    "episodic-memory",
    "semantic-memory",
    "consolidation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]
chroma = [
    "chromadb>=0.5.0",
]

[project.scripts]
hm-arch = "hm_arch.integrations.cli.main:main"

[project.urls]
Homepage = "https://github.com/ZhangHangjianMA/memashuman"
Documentation = "https://github.com/ZhangHangjianMA/memashuman#readme"
Repository = "https://github.com/ZhangHangjianMA/memashuman"
Issues = "https://github.com/ZhangHangjianMA/memashuman/issues"
Changelog = "https://github.com/ZhangHangjianMA/memashuman/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hm_arch.integrations.openclaw.bundled_plugin" = [
    "package.json",
    "openclaw.plugin.json",
    "dist/index.js",
]

[tool.setuptools.dynamic]
version = { attr = "hm_arch._version.__version__" }

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]
benchmark = [
    "tau2 @ git+https://github.com/sierra-research/tau2-bench@v1.0.0 ; python_version >= '3.12' and python_version < '3.14'",
    "scipy>=1.10.0 ; python_version >= '3.12' and python_version < '3.14'",
    "rank-bm25>=0.2.2 ; python_version >= '3.12' and python_version < '3.14'",
    "gymnasium>=1.0.0 ; python_version >= '3.12' and python_version < '3.14'",
    "websockets>=12.0 ; python_version >= '3.12' and python_version < '3.14'",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "benchmark: PRD scale and performance validation (excluded from default pytest)",
    "tau2_integration: requires tau2-bench installed (benchmark extra, Python 3.12+)",
]
addopts = ["-m", "not benchmark"]
